# hpc_lab3

./: CMakeLists.txt  Ergebnisse.xlsx  README.md  gameoflife_mpi Vorlage.c  gameoflife_mpi.c  gameoflife_mpi_sub.c  helloworld.c  logtime.txt  phase-field-mpi.c  script-segm-omp.sh
kommi/: gameoflife_mpi-func.c  gameoflife_mpi.c
